Version 5.0.13
--------------

  fixes
   - compiling without systemd
   - explicit initialisation of event loop
   - releasing of the event loop as soon as possible
   - improve holding the event loop by threads

  features
   - adaptation to musl C library

  change
   - minor improvement of the signature of callback afb_threads_job_getter_t

Version 5.0.12
--------------

  features
   - Provide merged configuration object to apis

  fixes
   - Fix autostart of required API when auto-api is used
   - Fix URL in pc files

Version 5.0.11
--------------

  features
   - Upgrading to RPC v3 (#6052)
   - Upgrading to RPC v3 / WebSocket (#6052)
   - Rewrite of afb-api-rpc for using afb-wrap-rpc
   - Add support of ev_timer_modify_period (#6108)

  fixes
   - Sequence events on their identity not globally (#6110)
   - Missing API message (#6105)
   - Default anonymous root API names (#6106, #6111)
   - Tracing of requests, calls, events (#6107)
   - Report unsupported bindings (#6115)
   - Long pause time on corrupted heap backtrace

  change
   - Websockets now daughters of upgrade
   - Removed function afb_hswitch_websocket_switch
     replaced by afb_hswitch_upgrade
   - Removed DBUS transparency of API
   - Removed support of RPCv2
   - Manage timers in nanoseconds internally

  minor/details
   - Avoid a second call to sigsetjmp on signal
   - Fix error report of ws-client on TCP

Version 5.0.10
--------------

  fixes
   - Interlock of event (push -> unsubscribe) removed by copying on stack

  features
   - RPC v3 calls can tell the API name

Version 5.0.9
-------------

  features
   - calls and subcalls accept NULL callback (for later optimization)
   - automatic remove of sessions without cookie value

  minor/details
   - remove lang field in afb-session

Version 5.0.8
-------------

  features
   - Implement optionnal masking for websockets

  fixes
   - Dont close extension on exit
   - The event monitor/disconnected is now hookable

Version 5.0.7